Edit github-pages content and templates

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -12,12 +12,8 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }} | {{ page.title }}</h1>
-      <!-- <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2> -->
-      <a href="#intro" class="btn">Intro</a>
-      <a href="#schedule" class="btn">Schedule</a>
-      <a href="#content" class="btn">Content</a>
-      <a href="http://comppx18.slack.com" target="_blank" class="btn">Slack</a>
-      <a href="{{ site.github.repository_url }}" target="_blank" class="btn">Source</a>
+      <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
+      <!-- <a href="{{ site.github.repository_url }}" target="_blank" class="btn">Source</a> -->
     </section>
 
     <section class="main-content">
