--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -9,7 +9,7 @@
     // background-color: #000;
     // background-image: linear-gradient(180deg, #000000, #292929);    
     // background-color: #159957;
-    background: url("../images/graphcore-vis-02.jpg") no-repeat center fixed;
+    background: url("../images/workshop-kv_animated_1200x600.gif") no-repeat center fixed;
     background-color: rgba(0,0,0,0.6);
     background-blend-mode: multiply;    
     // http://78.media.tumblr.com/7af9a9301e725ee96af056ad5782c299/tumblr_ot2cu8t35J1sep1pbo1_1280.jpg - (c) http://visualcodepoems.tumblr.com
