Edit github-pages css

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -63,20 +63,20 @@ a {
     text-decoration: none
 }
 
-@media screen and (min-width: 64em) {
-    .page-header {
-        padding: 3rem 6rem;
-    }
-}
+// @media screen and (min-width: 64em) {
+//     .page-header {
+//         padding: 3rem 6rem;
+//     }
+// }
 
-@media screen and (min-width: 42em) and (max-width: 64em) {
-    .page-header {
-        padding: 3rem 2rem
-    }
-}
+// @media screen and (min-width: 42em) and (max-width: 64em) {
+//     .page-header {
+//         padding: 3rem 2rem
+//     }
+// }
 
-@media screen and (max-width: 42em) {
-    .page-header {
-        padding: 1.5rem 1rem
-    }
-}
+// @media screen and (max-width: 42em) {
+//     .page-header {
+//         padding: 1.5rem 1rem
+//     }
+// }
